Thu Nov 14 19:33:28 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Print "nick now appears as newnick" and update Irssi's nicklist
	  when you change your nick to "nick". Closes #62
	* Never format your own nick. Closes #63

Thu Nov 14 09:44:54 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* SILC_UMODE_GONE changes are now propagated correctly to the
	  Irssi client. Closes #54
	
Tue Nov 12 19:42:18 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Fixed example in /HELP KEY

	* Added expando $j which expands to current SILC Client version

Tue Nov 12 19:46:39 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed public key decoding in crypto library.

	* Added better error printing to SKE library.

Tue Nov 12 08:50:12 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed NICK command to not crash if nickname was not sent.

Mon Nov 11 19:32:00 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added Encrypt-Then-MAC order to SILC packet MAC generation.
	  Deprecated the old Encrypt-And-MAC order.  Updated protocol
	  specs and implemented.

	* Added Encrypt-Then-MAC order to Channel Message Payload MAC
	  generation.  Updated specs and implemented.

Sun Nov 10 12:20:56 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added support for rekey before 2^32 sequence number wraps.
	  Affected files in server and client library.

	* Padding must be at least 8 bytes now.  Implemented and updated
	  protocol specs.

	* Compute maximum padding for authentication packets to make
	  passphrase approximation attacks impossible.  Affected files
	  in client library and in server.

	* Fixed PING command sending in client library and handling in
	  server.  The server ID must be ID Payload, not raw ID data.
	  Affected files in server and client library.

	* Defined that all public keys sent in commands and notify
	  payloads are actually Public Key Payloads not raw public key
	  data.  Updated protocol specs and implemented.
